# OpenGateLLM

./: .coveragerc  .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  cli.py  compose.example.yml  config.example.yml  import_circular_diagram.md  pyproject.toml
.github/: .env.ci.example  PULL_REQUEST_TEMPLATE.md  README_INTEGRATION_TESTS.md  compose.ci.yml
.github/ISSUE_TEMPLATE/: ⚙️-feature---improvements---chore.md  🐞-bug-report.md
.github/assets/: playground.config.yml
.github/badges/: coverage-unit.json  coverage.json
.github/workflows/: build_and_deploy.yml  deploy_documentation.yml  generate_documentation.yml  release_updates.yml  run_tests.yml  update_pyproject_version.yml
adr/: 2026-01-07-clean-architecture-migration.md  2026-01-30-es-scaling.md
adr/scripts/: 2026-01-30-es-migration.py
api/: .coveragerc  Dockerfile  alembic.ini  app.py  dependencies.py  factory.py  main.py
api/alembic/: env.py
api/domain/: __init__.py
api/endpoints/: agents.py  audio.py  auth.py  chat.py  chunks.py  collections.py  completions.py  deepsearch.py  documents.py  embeddings.py  files.py  me.py  model_provision.py  models.py  monitoring.py  ocr.py  parse.py  rerank.py  search.py  tokens.py  usage.py
api/helpers/: _accesscontroller.py  _agentmanager.py  _deepsearch.py  _documentmanager.py  _elasticsearchvectorstore.py  _identityaccessmanager.py  _limiter.py  _modeldatabasemanager.py  _multiagentmanager.py  _parsermanager.py  _streamingresponsewithstatuscode.py  _usagemanager.py  _usagetokenizer.py  _websearchmanager.py  auth_encryption.py
api/routers/: __init__.py  registry.py
api/schemas/: accounts.py  agents.py  audio.py  auth.py  chat.py  chunks.py  collections.py  completions.py  deepsearch.py  documents.py  embeddings.py  exception.py  files.py  me.py  model_provision.py  models.py  ocr.py  parse.py  rerank.py  search.py  tokens.py  usage.py
api/services/: model_invocation.py
api/sql/: models.py  session.py
api/tasks/: __init__.py  _celery.py  celery_app.py  model.py  queuing.py  routing.py
api/tests/: helpers.py
api/utils/: carbon.py  configuration.py  context.py  dependencies.py  exceptions.py  hooks_decorator.py  lifespan.py  load_balancing.py  logging.py  monitoring.py  qos.py  redis.py  routing.py  tools.py  variables.py
app/: factory.py
app/endpoints/: auth.py
app/helpers/: _identityaccessmanager.py  auth_encryption.py
app/sql/: models.py
app/utils/: exceptions.py  lifespan.py  variables.py
docs/: astro.config.mjs  celery.md  configuration.md  deployment.md  docusaurus.config.ts  iam.md  oauth2_encryption.md  openapi.json  package-lock.json  package.json  proconnect.md  redoc-static.html  routing.md  sidebars.ts
playground/: .gitignore  Dockerfile  configuration.py  main.py  nginx.conf  rxconfig.py  supervisord.conf  variables.py
scripts/: configuration_header.md  create_admin.py  create_first_user.py  generate_configuration_documentation.py  manage_docs_dns.py  startup_api.sh  startup_ui.sh  startup_worker.sh
ui/: configuration.py
(+499 files in other folders)
