[project]
name = "opengatellm"
version = "0.4.1"
description = "OpenGateLLM project"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "requests>=2.32.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "httpx>=0.28.0",
    "pyyaml>=6.0.3",
    "pycountry>=26.2.16",
]

[project.optional-dependencies]
playground = [
    "reflex>=0.8.27",
]
api = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "celery>=5.6.2",
    "ecologits>=0.9.3",
    "elasticsearch[async]>=9.3.0",
    "fastapi>=0.133.1",
    "gunicorn>=25.1.0",
    "html-to-markdown>=2.25.1",
    "itsdangerous>=2.2.0",
    "langchain-text-splitters>=1.1.1",
    "limits>=5.8.0",
    "mistralai>=1.10.0",
    "openai>=2.15.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg2-binary>=2.9.11",
    "pymupdf4llm>=0.3.4",
    "PyMuPDF>=1.27.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=7.2.1",
    "sentry-sdk[fastapi]>=2.53.0",
    "sqlalchemy-utils>=0.42.1",
    "sqlalchemy[asyncio]>=2.0.47",
    "tiktoken>=0.12.0",
    "uvicorn>=0.41.0"
]
worker = [
    "celery>=5.6.2",
    "redis>=7.2.1",
]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.2",
]
test = [
    "factory-boy>=3.3.3",
    "gevent>=25.9.1",
    "openmockllm @ git+https://github.com/etalab-ia/openmockllm.git@main",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "pytest>=9.0.2",
    "responses>=0.26.0",
    "respx>=0.22.0"
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 150
exclude = [
    "**/alembic",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = [
    "F403",  # import * 
    "F841",  # never used variables
    "E501",  # line too long
    "N806",  # force lowercase
    "UP031", # format specifiers instead of percent format
    "W291",  # trailing whitespace
    "N805",  # first argument of a class method call is self
    "N815",  # mixed case variable name
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["config", "utils", "api", "app"]
forced-separate = ["tests"]

[tool.ruff.lint.isort.sections]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
    # Ignore warnings from external libraries
    "ignore:builtin type Swig.*:DeprecationWarning",
    # factory_boy doesn't fully support async SQLAlchemy sessions
    "ignore:coroutine 'AsyncSession.flush' was never awaited:RuntimeWarning",
]